--- a/src/app/features/record/record.component.html
+++ b/src/app/features/record/record.component.html
@@ -11,31 +11,21 @@
 
       </div>
 
-      <div class="flex flex-wrap -m-4" >
-        <div class="lg:w-1/4 md:w-1/2 p-4 w-full" *ngFor="let n of userRecordList | appFilter: searchText">
+      <table class="table-auto">
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Operation Id</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let n of userRecordList | appFilter: searchText">
+            <td>{{n.id}}</td>
+            <td>{{n.operationId}}</td>
+          </tr>
+        </tbody>
+      </table>
 
-          <div style="display: flex;" > 
-            <p class="mt-1 pr-4">{{n.published_at | date: 'dd MMM yyyy' }}</p>
-
-            <div class="cursor-pointer"  >
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
-            </svg>
-            </div>            
-
-          </div>                    
-
-          <a class="block relative h-48 rounded overflow-hidden">
-            <img alt="ecommerce" class="object-cover object-center w-full h-full block" [src]="n.image_url">
-          </a>
-          <div class="mt-4">
-            <p class="mt-1">{{n.description}}</p>
-            <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">{{n.title}}</h3>
-            <h2 class="text-gray-900 title-font text-lg font-medium">{{n.summary}}</h2>
-            
-          </div>
-        </div>
-      </div>
 
       <div class="flex justify-center items-center">
       <div class="p-2 w-2/5 flex" >
