--- a/src/app/features/navigation/navigation.component.html
+++ b/src/app/features/navigation/navigation.component.html
@@ -7,8 +7,9 @@
         <span class="ml-3 text-xl">App</span>
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-gray-900 cursor-pointer" routerLink="/news-list">Noticias</a>
-        <a class="mr-5 hover:text-gray-900 cursor-pointer" routerLink="/favs-list">Favoritos</a>
+        <a class="mr-5 hover:text-gray-900 cursor-pointer" routerLink="/nav/operation">New Operation</a>
+        <a class="mr-5 hover:text-gray-900 cursor-pointer" routerLink="/nav/record">Records</a>
       </nav>
     </div>
   </header>
+  <router-outlet></router-outlet>
