--- a/src/app/features/operation/operation.component.html
+++ b/src/app/features/operation/operation.component.html
@@ -1,7 +1,6 @@
 <section class="text-gray-600 body-font">
     <div class="container px-5 mx-auto">
 
-
         <div class="grid gap-6 mb-6 md:grid-cols-3 w-1/2">
             <div>
                 <input type="text" id="first_number_a" [(ngModel)]="first_number_a" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500"  />
@@ -68,6 +67,14 @@
           </div>
         </div>
 
+        <div *ngIf="alert" class="alert alert-success box-msg" role="alert">
+            <strong>Done!</strong>
+        </div>
+
+
+        <div *ngIf="errorMsgAlert" class="alert alert-success box-msg" role="alert">
+            <strong>{{errorMsg}}</strong>
+        </div>
 
 
     </div>
