--- a/src/app/features/navigation/navigation.component.html
+++ b/src/app/features/navigation/navigation.component.html
@@ -9,6 +9,8 @@
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
         <a class="mr-5 hover:text-gray-900 cursor-pointer" routerLink="/nav/operation">New Operation</a>
         <a class="mr-5 hover:text-gray-900 cursor-pointer" routerLink="/nav/record">Records</a>
+        <a class="mr-5 hover:text-gray-900 cursor-pointer" (click)="logout()">Logout</a>
+
       </nav>
     </div>
   </header>
